[package]
name = "rust-aoc-2020"
version = "0.1.0"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
num-integer = "0.1"
permutohedron = "0.2.4"
